--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
   <!-- Slider -->
   <section class="slider">
     <div class="slides">
-      <div class="slide"><img src="assets/img/slide11.jpg" alt="Opis 1"></div>
-      <div class="slide"><img src="assets/img/slide21.jpg" alt="Opis 2"></div>
-      <div class="slide"><img src="assets/img/slide31.jpg" alt="Opis 3"></div>
-      <div class="slide"><img src="assets/img/slide41.jpg" alt="Opis 4"></div>
-      <div class="slide"><img src="assets/img/slide51.jpg" alt="Opis 5"></div>
+      <div class="slide"><img src="assets/img/Slide11.jpg" alt="Opis 1"></div>
+      <div class="slide"><img src="assets/img/Slide21.jpg" alt="Opis 2"></div>
+      <div class="slide"><img src="assets/img/Slide31.jpg" alt="Opis 3"></div>
+      <div class="slide"><img src="assets/img/Slide41.jpg" alt="Opis 4"></div>
+      <div class="slide"><img src="assets/img/Slide51.jpg" alt="Opis 5"></div>
     </div>
     <!-- Overlay z napisem -->
     <div class="slider__overlay">
